Fix can't enter directory error on some FTP servers with Turkish locale

Summary:
Some Android FTP server applications don't implement lower-case "list" command thus KIO can't connect to server and fail with error "Can't enter directory."
Sending upper-case "LIST" command works.

Edit: It turns out that the application ignores the case (using toUpperCase() function of java.lang.String) .
But on Turkish locale, lower-case 'i' converted to upper-case 'İ' instead of 'I' thus client receives "Command not implemented" result.
I assume this bug would cause problems on other servers that run with Turkish locale.

BUG: 409740

Test Plan:
1 - Change Android system language to Turkish.
2 - Start FTP server using ES File Manager 3.2.5.
3 - Connect to server using Dolphin.
4 - It should work without errors.

Reviewers: #frameworks, dfaure

Reviewed By: dfaure

Subscribers: dfaure, aacid, svuorela, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D22419